--- a/backend/package.json
+++ b/backend/package.json
@@ -24,11 +24,12 @@
     "groq-sdk": "^0.37.0",
     "jsdom": "^22.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^4.4.0",
     "mongoose": "^8.19.1",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.66.0",
-    "nodemailer": "^7.0.9",
+    "nodemailer": "^7.0.12",
     "openai": "^6.3.0",
     "otp-generator": "^4.0.1",
     "rss-parser": "^3.13.0",
