--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^7.0.12",
     "openai": "^6.3.0",
     "otp-generator": "^4.0.1",
+    "puppeteer": "^24.35.0",
     "rss-parser": "^3.13.0",
     "striptags": "^3.2.0"
   },
